# portfolio-risk-optimizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/propt/: cli.py  data.py  optimizer.py  report.py  risk.py
tests/: test_optimizer.py
